# autonomous_driving

./: .gitignore  README.md  master.launch  master_visualization.rviz
documentation/: README.md  gantt_chart.xlsx  movebase.pptx  work_packages.md
src/controller_pkg/: CMakeLists.txt
src/controller_pkg/launch/: controller_pkg.launch
src/controller_pkg/scripts/: state_machine.py
src/controller_pkg/src/: controller_node.cpp
src/ctra_model/: CMakeLists.txt  package.xml
src/ctra_model/src/: ctra_node.py  path_converter.py
src/navigation/: package.xml
src/navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml
src/navigation/launch/: move_base.launch
src/navigation_pkg/: CMakeLists.txt  package.xml
src/navigation_pkg/config/: global_costmap_params.yaml
src/navigation_pkg/launch/: navigation.launch
src/navigation_pkg/scripts/: move_base_seq.py
src/object_detection_pkg/: CMakeLists.txt  README.md  package.xml
src/object_detection_pkg/msg/: DepthAndColor.msg
src/object_detection_pkg/scripts/: cars_detection.py  traffic_light_color.py  traffic_light_depth_position.py  traffic_light_status.py
src/odometry_pkg/: CMakeLists.txt  package.xml
src/odometry_pkg/launch/: odometry.launch
src/odometry_pkg/scripts/: odometry.py
src/odometry_pkg/src/: odometry.py
src/perception_pkg/: CMakeLists.txt  README.md  package.xml
src/perception_pkg/cfg/: global_map.rviz  global_map_2.rviz  master_visualization.rviz  point_cloud.rviz
src/perception_pkg/launch/: perception.launch
src/perception_pkg/scripts/: odometry.py
src/perception_pkg/src/: global_2dmap_postprocessing.cpp  global_mapping_2Dmap_node.cpp  global_mapping_node.cpp  localization.cpp  point_cloud_filtering.cpp
src/simple_navigation_goals/launch/: movebase_seq.launch
src/simple_navigation_goals/scripts/: move_base_seq  simple_navigation_goals
src/simulation/: package.xml
src/simulation/launch/: simulation.launch  unity_ros.launch
src/simulation/src/: true_state_parser.h  w_to_unity.cpp
