<?xml version="1.0"?>
<package>
  <name> perception_pkg </name>
  <version>0.0.0</version>
  <description>The perception package</description>
  <maintainer email="sergio.zerpa@tum.de">Sergio Zerpa</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>octomap</build_depend>
  <!-- 
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  -->

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>octomap</run_depend>

  <!--
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  -->
  <export>
  </export>
</package>